--- a/src/app/features/projects/pages/project-list/project-list.component.html
+++ b/src/app/features/projects/pages/project-list/project-list.component.html
@@ -1,1 +1,34 @@
-<p>project-list works!</p>
+<h2>Project List</h2>
+<form [ formGroup ]="projectForm" (ngSubmit)="onSubmit()">
+  <label>
+    Name:
+    <input formControlName="name">
+  </label>
+  <label>
+    Description:
+    <input formControlName="description">
+  </label>
+  <label>
+    Deadline:
+    <input formControlName="deadline">
+  </label>
+  <button type="submit" [disabled]="projectForm.invalid">Create Project</button>
+</form>
+
+<hr />
+
+
+<ul>
+  <li *ngFor="let project of projects">
+    <h3>{{ project.name }}</h3>
+    <p>{{ project.description }}</p>
+    <p>Deadline: {{ project.deadline}}</p>
+    <p>Task: {{ project.tasks?.length || 0 }}</p>
+  </li>
+</ul>
+
+<!--
+*ngFor loopar igenom alla projekt.
+
+Vi visar namn, beskrivning, deadline och antal uppgifter.
+-->
